Revert "Java11 initial work for TOMEE-2584 TOMEE-2600 TOMEE-2601"